feat: 1.7 Add deployment, service, and ingress manifests for log-output application
- Updated deployment.yaml to set environment variable PORT to 3000 and expose container port 3000.
- Created service.yaml to define a ClusterIP service for log-output on port 3000.
- Added ingress.yaml to route traffic to the log-output service at the /status path on the log.local host.
- Included a new image for the log-output application.

--- a/log_output/manifests/deployment.yaml
+++ b/log_output/manifests/deployment.yaml
@@ -16,3 +16,8 @@ spec:
         - name: log-output
           image: log-output:1.0
           imagePullPolicy: IfNotPresent
+          env:
+            - name: PORT
+              value: "3000"
+          ports:
+            - containerPort: 3000
