--- a/log_output/manifests/deployment.yaml
+++ b/log_output/manifests/deployment.yaml
@@ -12,12 +12,33 @@ spec:
       labels:
         app: log-output
     spec:
+      volumes: # Define volume
+        - name: shared-logs
+          emptyDir: {}
       containers:
-        - name: log-output
+        - name: log-writer
           image: log-output:1.0
+          imagePullPolicy: IfNotPresent
+          env:
+            - name: LOG_DIR
+              value: "/var/log/app"
+            - name: LOG_FILE
+              value: "/var/log/app/log.txt"
+          volumeMounts:
+            - name: shared-logs
+              mountPath: /var/log/app
+        - name: log-reader
+          image: log-reader:1.0
           imagePullPolicy: IfNotPresent
           env:
             - name: PORT
               value: "3000"
+            - name: LOG_DIR
+              value: "/var/log/app"
+            - name: LOG_FILE
+              value: "/var/log/app/log.txt"
           ports:
             - containerPort: 3000
+          volumeMounts:
+            - name: shared-logs
+              mountPath: /var/log/app
