feat: 1.12 Refactor code structure for improved readability and maintainability

--- a/log_output/manifests/deployment.yaml
+++ b/log_output/manifests/deployment.yaml
@@ -27,6 +27,8 @@ spec:
               value: "/data"
             - name: COUNT_FILE
               value: "/data/pingpong-count.txt"
+            - name: IMAGE_FETCH_DISABLED
+              value: "true"
           ports:
             - containerPort: 3000
           volumeMounts:
