--- a/log_output/Dockerfile
+++ b/log_output/Dockerfile
@@ -2,6 +2,9 @@ FROM node:20-alpine
 
 WORKDIR /app
 
+# Install curl for proxy-aware image fetching
+RUN apk add --no-cache curl
+
 COPY index.js .
 
 CMD ["node", "index.js"]
