--- a/log_output/manifests/ingress.yaml
+++ b/log_output/manifests/ingress.yaml
@@ -9,6 +9,13 @@ spec:
     - host: log.local
       http:
         paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: log-output-svc
+                port:
+                  number: 3000
           - path: /status
             pathType: Prefix
             backend:
@@ -23,21 +30,3 @@ spec:
                 name: ping-pong-svc
                 port:
                   number: 8081
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: log-output-ing
-  annotations:
-    kubernetes.io/ingress.class: traefik
-spec:
-  rules:
-    - host: log.local
-      http:
-        paths:
-          - path: /status
-            pathType: Prefix
-            backend:
-              service:
-                name: log-output-svc
-                port:
-                  number: 3000
