feat: 2.2 Add todo-backend service and deployment with Docker support
- Created Dockerfile for the todo-backend application using Node.js.
- Implemented index.js to handle HTTP requests for managing todos.
- Added Kubernetes manifest for the todo-backend service and deployment.
- Configured service to expose the application on port 2345, targeting the container's port 3000.

--- a/todo-app/manifests/deployment.yaml
+++ b/todo-app/manifests/deployment.yaml
@@ -30,6 +30,8 @@ spec:
               value: "10"
             - name: IMAGE_FETCH_DISABLED
               value: "true"
+            - name: TODO_BACKEND_URL
+              value: "http://todo-backend-svc:2345"
           volumeMounts:
             - name: shared-data
               mountPath: /data
