Refactor code structure for improved readability and maintainability

--- a/log_output/manifests/configmap.yaml
+++ b/log_output/manifests/configmap.yaml
@@ -7,3 +7,30 @@ data:
   MESSAGE: "hello world"
   information.txt: |
     this text is from file
+  CONFIG_DIR: "/config"
+  DATA_DIR: "/data"
+  PORT: "3000"
+  PING_PONG_URL: "http://ping-pong-svc:8081/pingpong"
+  IMAGE_URL: "https://picsum.photos/1200"
+  IMAGE_FILE: "/data/image.jpg"
+  META_FILE: "/data/image-meta.json"
+  IMAGE_TTL_MIN: "10"
+  IMAGE_FETCH_DISABLED: "true"
+  IMAGE_FETCH_TIMEOUT_MS: "5000"
+  IMAGE_RETRY_MS: "30000"
+  IMAGE_UPLOAD_MAX_BYTES: "10485760"
+  IMAGE_USE_CURL: "auto"
+  # App configuration moved out of source code
+  CONFIG_DIR: "/config"
+  DATA_DIR: "/data"
+  PORT: "3000"
+  PING_PONG_URL: "http://ping-pong-svc:8081/pingpong"
+  IMAGE_URL: "https://picsum.photos/1200"
+  IMAGE_FILE: "/data/image.jpg"
+  META_FILE: "/data/image-meta.json"
+  IMAGE_TTL_MIN: "10"
+  IMAGE_FETCH_DISABLED: "false"
+  IMAGE_FETCH_TIMEOUT_MS: "5000"
+  IMAGE_RETRY_MS: "30000"
+  IMAGE_UPLOAD_MAX_BYTES: "10485760"
+  IMAGE_USE_CURL: "auto"
