feat: 2.7 Refactor code structure for improved readability and maintainability

--- a/ping-pong/Dockerfile
+++ b/ping-pong/Dockerfile
@@ -1,8 +1,15 @@
 FROM python:3.10-slim
 
-WORKDIR /app
-COPY app.py .
+ENV HTTP_PROXY=http://fihel1d-proxy.emea.nsn-net.net:8080
+ENV HTTPS_PROXY=http://fihel1d-proxy.emea.nsn-net.net:8080
+ENV NO_PROXY=localhost,127.0.0.1
+ENV http_proxy=http://fihel1d-proxy.emea.nsn-net.net:8080
+ENV https_proxy=http://fihel1d-proxy.emea.nsn-net.net:8080
+ENV no_proxy=localhost,127.0.0.1
 
-ENV PORT=8081
+WORKDIR /app
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+COPY app.py .
 
 CMD ["python", "app.py"]
