--- a/todo-backend/manifests/todo-backend.yaml
+++ b/todo-backend/manifests/todo-backend.yaml
@@ -17,6 +17,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-backend
+  namespace: project
 spec:
   replicas: 1
   selector:
@@ -31,8 +32,14 @@ spec:
         - name: todo-backend
           image: todo-backend:1.0
           imagePullPolicy: IfNotPresent
+          envFrom:
+            - configMapRef:
+                name: todo-backend-config
           env:
-            - name: PORT
-              value: "3000"
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: todo-postgres-secret
+                  key: POSTGRES_PASSWORD
           ports:
             - containerPort: 3000
