--- a/ping-pong/manifests/service.yaml
+++ b/ping-pong/manifests/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ping-pong-svc
+  namespace: exercises
 spec:
   selector:
     app: ping-pong
@@ -10,4 +11,4 @@ spec:
       protocol: TCP
       port: 8081
       targetPort: 8081
-  type: ClusterIP
+  type: LoadBalancer
