feat: 3.2 update manifests and app for improved ingress handling and service configuration

--- a/log_output/manifests/ingress.yaml
+++ b/log_output/manifests/ingress.yaml
@@ -1,13 +1,14 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: log-output-ing
+  name: apps-ingress
+  namespace: exercises
   annotations:
-    kubernetes.io/ingress.class: traefik
+    kubernetes.io/ingress.class: gce
 spec:
+  ingressClassName: gce
   rules:
-    - host: log.local
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
