--- a/ping-pong/manifests/service.yaml
+++ b/ping-pong/manifests/service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: ping-pong-svc
   namespace: exercises
+  annotations:
+    cloud.google.com/neg: '{"ingress": true}'
 spec:
   selector:
     app: ping-pong
@@ -11,4 +13,4 @@ spec:
       protocol: TCP
       port: 8081
       targetPort: 8081
-  type: LoadBalancer
+  type: ClusterIP
