feat: 3.5 add colorcontent service and update HTTPRoute for path handling

--- a/log_output/manifests/httproute.yaml
+++ b/log_output/manifests/httproute.yaml
@@ -24,6 +24,19 @@ spec:
     - matches:
         - path:
             type: PathPrefix
+            value: /colorcontent
+      filters:
+        - type: URLRewrite
+          urlRewrite:
+            path:
+              type: ReplacePrefixMatch
+              replacePrefixMatch: /
+      backendRefs:
+        - name: colorcontent-svc
+          port: 80
+    - matches:
+        - path:
+            type: PathPrefix
             value: /
       backendRefs:
         - name: log-output-svc
