--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 todo-backend/manifests/google-cloud-sdk/
 todo-backend/manifests/google-cloud-cli-linux-x86_64.tar.gz
 install_google_cloud_sdk.bash
+private-key.json
