feat: 3.10 Add PostgreSQL backup functionality with GCS integration
- Created a Dockerfile for a backup image that installs the PostgreSQL client and copies a backup script.
- Implemented a backup script that dumps the PostgreSQL database and uploads the dump to a specified Google Cloud Storage bucket.
- Added a ConfigMap for backup configuration, including GCS bucket and database connection details.
- Defined a CronJob to automate the backup process, utilizing the backup image and environment variables from the ConfigMap and Secret.

--- a/todo-backend/manifests/todo-backend-config.yaml
+++ b/todo-backend/manifests/todo-backend-config.yaml
@@ -4,9 +4,7 @@ metadata:
   name: todo-backend-config
   namespace: project
 data:
-  PORT: "3000"
-  DB_HOST: "todo-postgres"
+  DB_HOST: postgres.exercises.svc.cluster.local
   DB_PORT: "5432"
-  DB_NAME: "todos"
-  DB_USER: "todos"
-  TODO_MAX_LEN: "140"
+  DB_NAME: pingpong
+  DB_USER: pingpong
