--- a/ping-pong/manifests/postgres-client.yaml
+++ b/ping-pong/manifests/postgres-client.yaml
@@ -28,3 +28,10 @@ spec:
             secretKeyRef:
               name: postgres-secret
               key: POSTGRES_PASSWORD
+      resources:
+        requests:
+          cpu: "50m"
+          memory: "64Mi"
+        limits:
+          cpu: "200m"
+          memory: "256Mi"
