--- a/todo-app/manifests/deployment.yaml
+++ b/todo-app/manifests/deployment.yaml
@@ -36,3 +36,10 @@ spec:
           volumeMounts:
             - name: shared-data
               mountPath: /data
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
