--- a/todo-backend/manifests/cronjob.yaml
+++ b/todo-backend/manifests/cronjob.yaml
@@ -27,6 +27,13 @@ spec:
               volumeMounts:
                 - name: scripts
                   mountPath: /scripts
+              resources:
+                requests:
+                  cpu: "50m"
+                  memory: "64Mi"
+                limits:
+                  cpu: "200m"
+                  memory: "256Mi"
           volumes:
             - name: scripts
               configMap:
