--- a/todo-backend/manifests/todo-backend.yaml
+++ b/todo-backend/manifests/todo-backend.yaml
@@ -43,3 +43,10 @@ spec:
                   key: POSTGRES_PASSWORD
           ports:
             - containerPort: 3000
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
