--- a/todo-backend/manifests/todo-postgres-statefulset.yaml
+++ b/todo-backend/manifests/todo-postgres-statefulset.yaml
@@ -70,6 +70,13 @@ spec:
                 - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB" -h 127.0.0.1
             initialDelaySeconds: 20
             periodSeconds: 10
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "1000m"
+              memory: "1Gi"
   volumeClaimTemplates:
     - metadata:
         name: pgdata
