--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,6 +2,8 @@ name: Release application to GKE
 
 on:
   push:
+    branches:
+      - main
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
@@ -11,6 +13,7 @@ env:
   REPOSITORY: dwk-repo
   IMAGE: colorcontent
   SERVICE: colorcontent
+  NAMESPACE: project
   BRANCH: ${{ github.ref_name }}
 
 jobs:
@@ -19,53 +22,57 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout source code
         uses: actions/checkout@v4
 
-      - uses: google-github-actions/auth@v2
+      # Authenticate to GCP using Service Account key
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
         with:
-          credentials_json: "${{ secrets.GKE_SA_KEY }}"
+          credentials_json: ${{ secrets.GKE_SA_KEY }}
 
-      - name: Set up Cloud SDK
+      - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Verify gcloud
+      - name: Verify gcloud installation
         run: gcloud info
 
-      - name: Configure Docker auth for Artifact Registry
+      # Allow Docker to push to Artifact Registry
+      - name: Configure Docker auth
         run: gcloud --quiet auth configure-docker ${{ env.REGISTRY }}
 
+      # Access the GKE cluster
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
-          cluster_name: "${{ env.GKE_CLUSTER }}"
-          project_id: "${{ env.PROJECT_ID }}"
-          location: "${{ env.GKE_ZONE }}"
+          cluster_name: ${{ env.GKE_CLUSTER }}
+          project_id: ${{ env.PROJECT_ID }}
+          location: ${{ env.GKE_ZONE }}
 
-      - name: Form the image name
-        run: echo "IMAGE_TAG=${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ env.BRANCH }}-${GITHUB_SHA}" >> $GITHUB_ENV
+      # Construct full image tag
+      - name: Set image tag
+        run: |
+          echo "IMAGE_TAG=${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ env.BRANCH }}-${GITHUB_SHA}" >> $GITHUB_ENV
 
-      - name: Build
-        run: docker build --tag "$IMAGE_TAG" -f color-content/Dockerfile color-content
+      # Build Docker image
+      - name: Build Docker image
+        run: |
+          docker build \
+            -t "$IMAGE_TAG" \
+            -f color-content/Dockerfile \
+            color-content
 
-      - name: Publish
+      # Push image to Artifact Registry
+      - name: Push Docker image
         run: docker push "$IMAGE_TAG"
 
+      # Install kustomize
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2.1.0
 
-      - name: Determine target namespace
-        run: |
-          if [ "${{ env.BRANCH }}" = "main" ]; then
-            echo "NAMESPACE=project" >> $GITHUB_ENV
-          else
-            echo "NAMESPACE=${{ env.BRANCH }}" >> $GITHUB_ENV
-          fi
-      - name: Deploy
+      # Deploy to Kubernetes
+      - name: Deploy to GKE
         working-directory: color-content
         run: |
-          kustomize edit set image colorcontent="$IMAGE_TAG"
-          kustomize edit set namespace "$NAMESPACE"
-          kustomize build . | kubectl apply -f -
-          kubectl rollout status deployment "${{ env.SERVICE }}" -n "$NAMESPACE"
-          kubectl get services -o wide -n "$NAMESPACE"
+          kustomize edit set image colorcontent=$IMAGE_TAG
+          ku
