--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,8 +2,6 @@ name: Release application to GKE
 
 on:
   push:
-    branches:
-      - main
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
@@ -13,7 +11,6 @@ env:
   REPOSITORY: dwk-repo
   IMAGE: colorcontent
   SERVICE: colorcontent
-  NAMESPACE: project
   BRANCH: ${{ github.ref_name }}
 
 jobs:
@@ -22,57 +19,45 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      # Authenticate to GCP using Service Account key
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
+      - uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GKE_SA_KEY }}
+          credentials_json: "${{ secrets.GKE_SA_KEY }}"
 
-      - name: Set up Google Cloud SDK
+      - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Verify gcloud installation
+      - name: Verify gcloud
         run: gcloud info
 
-      # Allow Docker to push to Artifact Registry
-      - name: Configure Docker auth
+      - name: Configure Docker auth for Artifact Registry
         run: gcloud --quiet auth configure-docker ${{ env.REGISTRY }}
 
-      # Access the GKE cluster
       - name: Get GKE credentials
         uses: google-github-actions/get-gke-credentials@v2
         with:
-          cluster_name: ${{ env.GKE_CLUSTER }}
-          project_id: ${{ env.PROJECT_ID }}
-          location: ${{ env.GKE_ZONE }}
+          cluster_name: "${{ env.GKE_CLUSTER }}"
+          project_id: "${{ env.PROJECT_ID }}"
+          location: "${{ env.GKE_ZONE }}"
 
-      # Construct full image tag
-      - name: Set image tag
-        run: |
-          echo "IMAGE_TAG=${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ env.BRANCH }}-${GITHUB_SHA}" >> $GITHUB_ENV
+      - name: Form the image name
+        run: echo "IMAGE_TAG=${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ env.BRANCH }}-${GITHUB_SHA}" >> $GITHUB_ENV
 
-      # Build Docker image
-      - name: Build Docker image
-        run: |
-          docker build \
-            -t "$IMAGE_TAG" \
-            -f color-content/Dockerfile \
-            color-content
+      - name: Build
+        run: docker build --tag "$IMAGE_TAG" -f color-content/Dockerfile color-content
 
-      # Push image to Artifact Registry
-      - name: Push Docker image
+      - name: Publish
         run: docker push "$IMAGE_TAG"
 
-      # Install kustomize
       - name: Set up Kustomize
         uses: imranismail/setup-kustomize@v2.1.0
 
-      # Deploy to Kubernetes
-      - name: Deploy to GKE
+      - name: Deploy
         working-directory: color-content
         run: |
-          kustomize edit set image colorcontent=$IMAGE_TAG
-          ku
+          kustomize edit set image colorcontent="$IMAGE_TAG"
+          kustomize build . | kubectl apply -f -
+          kubectl rollout status deployment "${{ env.SERVICE }}" -n exercises
+          kubectl get services -o wide -n exercises
