--- a/todo-backend/manifests/todo-backend.yaml
+++ b/todo-backend/manifests/todo-backend.yaml
@@ -30,12 +30,14 @@ spec:
     spec:
       containers:
         - name: todo-backend
-          image: todo-backend:1.0
+          image: europe-north1-docker.pkg.dev/dwk-gke-482511/dwk-repo/todo-backend:1.0
           imagePullPolicy: IfNotPresent
           envFrom:
             - configMapRef:
                 name: todo-backend-config
           env:
+            - name: PORT
+              value: "3000"
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -45,8 +47,8 @@ spec:
             - containerPort: 3000
           resources:
             requests:
-              cpu: "100m"
-              memory: "128Mi"
+              cpu: "50m"
+              memory: "64Mi"
             limits:
               cpu: "500m"
               memory: "512Mi"
