--- a/todo-backend/manifests/todo-postgres-statefulset.yaml
+++ b/todo-backend/manifests/todo-postgres-statefulset.yaml
@@ -54,6 +54,7 @@ spec:
           volumeMounts:
             - name: pgdata
               mountPath: /var/lib/postgresql/data
+              subPath: postgres
           readinessProbe:
             exec:
               command:
@@ -72,8 +73,8 @@ spec:
             periodSeconds: 10
           resources:
             requests:
-              cpu: "250m"
-              memory: "512Mi"
+              cpu: "200m"
+              memory: "256Mi"
             limits:
               cpu: "1000m"
               memory: "1Gi"
