feat: 4.5 dd PersistentVolume and PersistentVolumeClaim for shared project storage
- Created a PersistentVolume named 'shared-pv-project' with a capacity of 1Gi, using hostPath for local storage.
- Defined a PersistentVolumeClaim named 'shared-pvc' in the 'project' namespace, requesting 1Gi of storage with ReadWriteOnce access mode.

--- a/todo-backend/manifests/todo-backend.yaml
+++ b/todo-backend/manifests/todo-backend.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
         - name: todo-backend
-          image: europe-north1-docker.pkg.dev/dwk-gke-482511/dwk-repo/todo-backend:1.0
+          image: todo-backend:1.0
           imagePullPolicy: IfNotPresent
           envFrom:
             - configMapRef:
