--- a/storage/shared-pv-project.yaml
+++ b/storage/shared-pv-project.yaml
@@ -1,15 +1,16 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: shared-pv
+  name: shared-pv-project
 spec:
   capacity:
     storage: 1Gi
   accessModes:
     - ReadWriteOnce
   storageClassName: local-path
+  persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: /tmp/kube
+    path: /tmp/kube/project-shared
   claimRef:
     namespace: project
     name: shared-pvc
