--- a/storage/pvc.yaml
+++ b/storage/pvc.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: shared-pvc
+  name: pgdata-todo-postgres-0
+  namespace: project
 spec:
   accessModes:
     - ReadWriteOnce
