--- a/todo-backend/manifests/todo-backend-config.yaml
+++ b/todo-backend/manifests/todo-backend-config.yaml
@@ -4,5 +4,5 @@ metadata:
   name: todo-backend-config
   namespace: project
 data:
-  NATS_URL: nats://nats:4222
+  NATS_URL: nats://my-nats.default.svc.cluster.local:4222
   NATS_SUBJECT: todos.events
