feat: git commit -m "Move kustomization to log_output and update ArgoCD path" git push

--- a/log_output/manifests/configmap.yaml
+++ b/log_output/manifests/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: log-output-config
-  namespace: exercises
+  namespace: project
 data:
   MESSAGE: "hello world"
   information.txt: |
