--- a/log_output/manifests/deployment.yaml
+++ b/log_output/manifests/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: log-output
-          image: europe-north1-docker.pkg.dev/dwk-gke-482511/dwk-repo/log-output:latest
+          image: vienha/log-output:latest
           imagePullPolicy: IfNotPresent
           envFrom:
             - configMapRef:
