--- a/log_output/manifests/deployment.yaml
+++ b/log_output/manifests/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: log-output
-          image: localhost:5000/log-output:latest
+          image: k3d-local-registry:5000/log-output:latest
           imagePullPolicy: Always
           envFrom:
             - configMapRef:
