fix: update token reference to github_token and enable push for image updates in deployment workflows

--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -61,4 +61,5 @@ jobs:
           message: "Update production images to ${GITHUB_REF_NAME}"
           author_name: "github-actions[bot]"
           author_email: "github-actions[bot]@users.noreply.github.com"
-          token: ${{ secrets.CONFIG_REPO_TOKEN }}
+          github_token: ${{ secrets.CONFIG_REPO_TOKEN }}
+          push: true
