--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -62,4 +62,5 @@ jobs:
           message: "Update staging images to ${GITHUB_SHA}"
           author_name: "github-actions[bot]"
           author_email: "github-actions[bot]@users.noreply.github.com"
-          token: ${{ secrets.CONFIG_REPO_TOKEN }}
+          github_token: ${{ secrets.CONFIG_REPO_TOKEN }}
+          push: true
