style: standardize quotes in paths-ignore section of deploy-staging.yaml

--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     paths-ignore:
-      - 'gitops/**'
-      - '.github/**'
+      - "gitops/**"
+      - ".github/**"
 
 jobs:
   build-publish-staging:
