feat: 5.6 Refactor code structure for improved readability and maintainability

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ todo-backend/manifests/google-cloud-sdk/
 todo-backend/manifests/google-cloud-cli-linux-x86_64.tar.gz
 install_google_cloud_sdk.bash
 private-key.json
+istio-1.28.2/
+
